# fhir-specifications-parser

./: Cargo.toml  README.md  cspell.json  fhir-specifications-parser.profdata
doc/fhir-specifications/r5/fhir-definitions-json/: conceptmaps.json  dataelements.json  profiles-types.json  search-parameters.json
src/: main.rs  r5.rs  util.rs
src/r5/: abstract_types.rs  parse.rs  properties.rs  resource.rs  todo.rs  types.rs
src/r5/abstract_types/: backbone_element.rs  canonical_resource.rs  data_type.rs  domain_resource.rs  element.rs  metadata_resource.rs  primitive_type.rs  resource.rs
src/r5/parse/: aa.rs  all.rs  concept_maps.rs  data_elements.rs  profiles_others.rs  profiles_resources.rs  profiles_types.rs  profiles_types_resource.rs  search_parameters.rs  value_sets.rs
src/r5/parse/concept_maps/: bundle.rs  resource.rs
src/r5/properties/: array.rs  complex.rs  object.rs  primitive.rs  property.rs
src/r5/todo/: data_type.rs  property.rs  publication_status.rs
src/r5/types/: address.rs  age.rs  annotation.rs  attachment.rs  availability.rs  backbone_type.rs  base.rs  base_64_binary.rs  boolean.rs  canonical.rs  code.rs  codeable_concept.rs  codeable_reference.rs  coding.rs  contact_detail.rs  contact_point.rs  contributor.rs  count.rs  data_requirement.rs  date.rs  date_time.rs  decimal.rs  distance.rs  dosage.rs  duration.rs  element_definition.rs  expression.rs  extended_contact_detail.rs  extension.rs  human_name.rs  id.rs  identifier.rs  instant.rs  integer.rs  integer_64.rs  markdown.rs  meta.rs  monetary_component.rs  money.rs  money_quantity.rs  (+25 more)
(+289 files in other folders)
