[package]
name = "fhir-specifications-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "~1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.140" } # Serde serialization/deserialization of JSON data.
serde_with = { version = "3.14" } # Serde annotation helpers for serde "with" and "serde_as"
indoc = { version = "*" } # Indented string literal procedural macro.
convert_case = { version = "*" } # Convert text case, such as from camel case to snake case.
